--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -1,4 +1,3 @@
-# Tên của quy trình CI/CD
 name: Laravel CI/CD with Newman Tests
 
 on:
@@ -13,11 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Bước 1: Lấy code từ repository về
       - name: Checkout Code ⚙️
         uses: actions/checkout@v4
 
-      # Bước 2: Tạo file .env từ template và secrets
+      - name: Load .env file
+        run: export $(cat .env | xargs)
+
       - name: Create Laravel .env file 🔧
         env:
           APP_KEY: ${{ secrets.APP_KEY }}
@@ -27,52 +27,51 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: |
           echo "🔧 Creating Laravel .env file from .env.ci template..."
-          # Lệnh envsubst sẽ đọc file .env.ci, tìm các biến $VAR và thay bằng giá trị từ secrets
           envsubst < sprint5-with-bugs/API/.env.ci > sprint5-with-bugs/API/.env
+          cat sprint5-with-bugs/API/.env
           echo "✅ .env file created successfully."
 
-      # Bước 3: Khởi động các container Docker
       - name: Start Docker Containers 🐳
+        env:
+          SPRINT: sprint5-with-bugs
         run: docker compose up -d
 
-      # Bước 4: Chờ các dịch vụ sẵn sàng
-      - name: Wait for Services ⏳
-        run: sleep 60
-        shell: bash
+      - name: Wait for MariaDB ⏳
+        run: |
+          until docker compose exec -T mariadb mysqladmin ping -h mariadb -u user -proot --silent; do
+            echo "Waiting for MariaDB..."
+            sleep 5
+          done
 
-      # Bước 5: Cài đặt các thư viện và thiết lập ứng dụng
+      - name: Disable ffi extension
+        run: |
+          docker compose exec -T laravel-api sed -i 's/extension=ffi/;extension=ffi/' /usr/local/etc/php/php.ini
+
       - name: Setup Application 🔧
         run: |
           echo "📦 Installing Composer dependencies..."
-          # Sử dụng service 'composer' đã định nghĩa trong docker-compose.yml
           docker compose run --rm composer
-
           echo "🔒 Fixing permissions..."
-          # Gán quyền truy cập cho thư mục storage và cache
           docker compose exec -T -u root laravel-api chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
-
           echo "🗄️ Running database migrations and seeding..."
-          # Chạy migrate & seed
           docker compose exec -T laravel-api php artisan migrate:fresh --seed --force
 
-      # Bước 6: Cài đặt Node.js và Newman
       - name: Install Node.js & Newman ⚙️
         uses: actions/setup-node@v4
         with:
           node-version: "18"
-      - run: npm install -g newman newman-reporter-htmlextra
+      - run: npm install -g newman@latest newman-reporter-htmlextra@latest
 
-      # Bước 7: Chạy kiểm thử Newman
       - name: Run Newman Tests 🚀
         run: |
           newman run sprint5-with-bugs/API/tests/api/collection.json \
             -e sprint5-with-bugs/API/tests/api/environment.json \
-            --iteration-data sprint5-with-bugs/API/tests/api/user-accounts.csv \
+            --iteration-data sprint5-with-bugs/API/tests/api/users-data.csv \
             --reporters cli,junit,htmlextra \
-            --reporter-junit-export newman-report.xml \
-            --reporter-htmlextra-export newman-report.html
+            --reporter-junit-export ./newman-report.xml \
+            --reporter-htmlextra-export ./newman-report.html
+          ls -l newman-report.*
 
-      # Bước 8: Upload báo cáo (luôn chạy)
       - name: Upload Test Report 📊
         uses: actions/upload-artifact@v4
         if: always()
@@ -82,7 +81,6 @@ jobs:
             newman-report.html
             newman-report.xml
 
-      # Bước 9: Dọn dẹp (luôn chạy)
       - name: Cleanup 🧹
         if: always()
         run: docker compose down -v
