--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - 4200:4200
     command: >
-      bash -c "npm install --force && ng serve --host 0.0.0.0 --port 4200"
+      bash -c "rm -rf node_modules && npm install --legacy-peer-deps && ng serve --host 0.0.0.0 --port 4200"
 
   # The Web Server
   web:
@@ -54,7 +54,7 @@ services:
   mariadb:
     image: yobasystems/alpine-mariadb:10.6.11
     ports:
-      - 3306:3306
+      - 3307:3306
     expose:
       - 3306
     environment:
